syntax = "proto2";

package bbg1;

enum Direction {
    N = 1;
    S = 2;
    E = 3;
    W = 4;
}

message MouseAxes {
    required double x = 1;
    required double y = 2;
}

message TankRotate {
    required uint32 id = 1;
    required int32 x = 2;
    required int32 y = 3;
    required MouseAxes mouseAxes = 4;
    optional uint32 prevId = 20;
}

message TankMove {
    required uint32 id = 1;
    required Direction direction = 2;
    // required MouseAxes mouseAxes = 3;
    optional uint32 prevId = 20;
}

message TankGun {
    required uint32 bullets = 1;
    required uint32 damage = 2;
}

message Tank {
    required uint32 id = 1;
    required int32 x = 2;
    required int32 y = 3;
    required int32 health = 4;
    required int32 fireRate = 5;
    required TankGun gun = 6;
    required int32 speed = 7;
    required Direction direction = 8;
    required uint32 width = 9;
    required uint32 height = 10;
}


message TankUpdate {

    enum Status {
        New = 1;
        Update = 2;
        Destroy = 3;
    }

    required uint32 id = 1;
    required uint32 tankId = 2;
    required int32 x = 3;
    required int32 y = 4;
    required int32 health = 5;
    optional int32 fireRate = 6;
    optional int32 bullets = 7;
    optional int32 speed = 8;
    required Direction direction = 9;
    optional Status status = 10;
    required double angle = 11;
    required uint32 damage = 12;

    optional uint32 prevId = 20;
}

message TankRemove {
    required uint32 id = 1;
    required uint32 tankId = 2;
    optional uint32 prevId = 20;
}

message TankShoot {
    required uint32 id = 1;
    required int32 x = 2;
    required int32 y = 3;
    required MouseAxes mouseAxes = 4;
    optional uint32 prevId = 20;
}

message BulletUpdate {
    required uint32 id = 1;
    required uint32 tankId = 2;
    required double x = 3;
    required double y = 4;
    required double angle = 5;
    required int32 speed = 6;
    required bool alive = 7;
}

message MapUpdate {
    repeated TankUpdate tanks = 1;
    repeated BulletUpdate bullets = 2;
}

message BBGProtocol {

    enum Type {
        TankReg = 1;
        TankMove = 2;
        TankUpdate = 3;
        TankNew = 4;
        TankUnreg = 5;
        TankRemove = 6;
        TankRotate = 7;
        TankShoot = 8;
        BulletUpdate = 9;
        MapUpdate = 10;

        UnhandledType = 99;

        Ping = 100;
        Pong = 101;
    }

    required Type type = 1;
    required uint32 version = 2;

    optional TankMove tankMove = 11;
    optional TankUpdate tankUpdate = 12;
    optional TankUpdate tankNew = 13;
    optional TankRemove tankRemove = 14;
    optional TankRotate tankRotate = 15;
    optional TankShoot tankShoot = 16;
    optional BulletUpdate bulletUpdate = 20;
    optional MapUpdate mapUpdate = 30;

    optional bool ping = 100;
    optional bool pong = 101;
}